kubernetes/ws-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: ws-backend-service
spec:
  selector:
    app: ws-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-backend
  template:
    metadata:
      labels:
        app: ws-backend
    spec:
      containers:
      - name: ws-backend
        image: suhaskanwar/collabdraw-ws:998d606f04cd213b0728127c0c704764bdf6ba67
        ports:
        - containerPort: 8080
